--- a/proj/pag.html
+++ b/proj/pag.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 
 <head>
   <meta charset="UTF-8">
@@ -12,9 +12,23 @@
 
 <body>
   <div class="container">
-    <img src="/img/IMG-20240831-WA0024.jpg" alt="love">
-    <h1>Ryan & Emilly</h1>
+    <div class="carousel">
+      <div class="carousel-images">
+        <img src="/img/1.jpg" alt="foto 1">
+        <img src="/img/8.jpg" alt="foto 2">
+        <img src="/img/2.jpg" alt="foto 3">
+        <img src="/img/4.jpg" alt="foto 4">
+        <img src="/img/7.jpg" alt="foto 5">
+        <img src="/img/3.jpg" alt="foto 6">
+        <img src="/img/5.jpg" alt="foto 7">
+        <img src="/img/6.jpg" alt="foto 8">
+        <!-- Adicione mais imagens aqui -->
+      </div>
+    </div>
+
+    <h1>Ryan & Emilly❤</h1>
     <p id="contador">Calculando...</p>
+    <h2>
   </div>
 
 </body>
